add conclusion and further action plan

--- a/code/1 House price EDA.ipynb
+++ b/code/1 House price EDA.ipynb
@@ -2391,7 +2391,7 @@
     "    feature_importances = pd.DataFrame({'feature': feature_names, 'importance': feature_importance_values})\n",
     "    \n",
     "    # Overall validation score\n",
-    "    valid_mse = mean_squared_error(labels, out_of_fold)\n",
+    "    valid_mse = np.sqrt(mean_squared_error(labels, out_of_fold))\n",
     "    \n",
     "    # Add the overall scores to the metrics\n",
     "    valid_scores.append(valid_mse)\n",
@@ -6650,6 +6650,24 @@
    "outputs": [],
    "source": [
     "submission.to_csv('baseline_lgb.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The LB score is 0.13162\n",
+    "\n",
+    "# further action\n",
+    "\n",
+    "1. Feature engineering, \n",
+    "2. Use auto feature tool to create more features.\n",
+    "\n",
+    "3. use another model, such as xgboost or catboost\n",
+    "\n",
+    "4. optimize the current model to find the right hyper-parameter.\n",
+    "5. auto tools to find right hyper-parameter.\n",
+    "6. use bayes optimize to find the hyper-parameter."
    ]
   },
   {
